; ModuleID = '/home/carl/AnghaBench/postgres/contrib/sepgsql/extr_database.c_sepgsql_database_drop.c'
source_filename = "/home/carl/AnghaBench/postgres/contrib/sepgsql/extr_database.c_sepgsql_database_drop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, i32, i32 }

@DatabaseRelationId = common dso_local global i32 0, align 4
@SEPG_CLASS_DB_DATABASE = common dso_local global i32 0, align 4
@SEPG_DB_DATABASE__DROP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sepgsql_database_drop(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_4__, align 8
  %4 = alloca i8*, align 8
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* @DatabaseRelationId, align 4
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %3, i32 0, i32 2
  store i32 %5, i32* %6, align 4
  %7 = load i32, i32* %2, align 4
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %3, i32 0, i32 1
  store i32 %7, i32* %8, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %3, i32 0, i32 0
  store i64 0, i64* %9, align 8
  %10 = call i8* @getObjectIdentity(%struct.TYPE_4__* %3)
  store i8* %10, i8** %4, align 8
  %11 = load i32, i32* @SEPG_CLASS_DB_DATABASE, align 4
  %12 = load i32, i32* @SEPG_DB_DATABASE__DROP, align 4
  %13 = load i8*, i8** %4, align 8
  %14 = call i32 @sepgsql_avc_check_perms(%struct.TYPE_4__* %3, i32 %11, i32 %12, i8* %13, i32 1)
  %15 = load i8*, i8** %4, align 8
  %16 = call i32 @pfree(i8* %15)
  ret void
}

declare dso_local i8* @getObjectIdentity(%struct.TYPE_4__*) #1

declare dso_local i32 @sepgsql_avc_check_perms(%struct.TYPE_4__*, i32, i32, i8*, i32) #1

declare dso_local i32 @pfree(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
